--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: .8fr 1.5fr 1.5fr 1.8fr;
     grid-template-areas: "nav nav nav nav"
-    "sidebar main main main"
+    "sidebar aboutme aboutme aboutme"
     "sidebar porfolio porfolio porfolio "
     "sidebar porfolio porfolio porfolio"
     "footer footer footer footer";
@@ -23,6 +23,7 @@
     font-weight: 500;
     font-size: large;
     text-align: center;
+    
 }
 
 header {
@@ -70,20 +71,12 @@ p {
     font-size: 14px;
 }
 
-main {
-    background: #6B8A87;
-    grid-area: main;
-    font-family: Arial, Helvetica, sans-serif;
-    font-style: initial;
-    color: #ffffff;
-}
-
-#about-me-styled {
+.aboutme {
     font-family: 'Helvetica', sans-serif;
+    padding-top: 20px;
     font-size: large;
     color: #ffffff;
     background: #6B8A87;
-    grid-area: main;
     font-family: Arial, Helvetica, sans-serif;
     font-style: initial;
 }
@@ -92,11 +85,13 @@ main {
     object-fit: contain;
     align-items: center;
     height: 250px;
-    width: 200px;   
+    width: 250px;   
     border-radius: 50%;
+    padding-top: 50px;
+    padding-bottom: 30px;
 }
 
-#sidebar {
+.sidebar {
     background: #486970;
     grid-area: sidebar;
     font-family: 'Helvetica', sans-serif;
@@ -108,7 +103,7 @@ main {
     background: #486970;
     grid-area: sidebar;
     font-family: 'Helvetica', sans-serif;
-    font-size: 20;
+    font-size: large;
     float: right;
     color: #ffffff;
 
@@ -123,12 +118,10 @@ main {
     flex-direction: column;
 }
 
-.flex-container {
-    display: flex;
-    flex: row;
-    flex-wrap: wrap;
-    flex-flow: row wrap;
-    justify-content: space-around;
+.porfoliocontainer {
+    width: 100px;
+    flex: 2;
+    border: dodgerblue;
 }
 
 .card {
@@ -176,7 +169,7 @@ main {
     grid-template-columns: 1fr;
     grid-template-rows: 0.5fr 1.5fr 1.5fr 2.5fr ;
     grid-template-areas: "nav"
-    "main"
+    "aboutme"
     "sidebar"
     "porfolio"
     "footer";
@@ -209,14 +202,11 @@ main {
 .footer {
     grid-column: 1 / 3;
     grid-row: 3;
-    padding: 30px;
+    padding: 40px;
+    font-size: 36px;
     clear: both;
     background-color: #e3d8e3;
     color: #ffffff;
     font-family: Helvetica, sans-serif;
     text-align: center;
-}
-
-.footer h2 {
-    font-size: 38px;
 }
